basic outline of blog post

--- a/currency.html
+++ b/currency.html
@@ -7,7 +7,8 @@
         <title>Currency Thoughts</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="currency.css">
+        <link rel="stylesheet" href="dylan.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     </head>
     <body>
         <div class="container">
